--- a/.gitattributes
+++ b/.gitattributes
@@ -13,3 +13,4 @@
 *.mesh filter=lfs diff=lfs merge=lfs -text
 *.jpg filter=lfs diff=lfs merge=lfs -text
 *.mp3 filter=lfs diff=lfs merge=lfs -text
+*.tga filter=lfs diff=lfs merge=lfs -text
